# rudniki_backend

./: .gitignore  CMakeLists.txt  README.md  output
docs/: DatabaseHandler.md  HttpServer.md
docs/Model/: ModelTemplate.md  UserModel.md
includes/: DatabaseHandler.hpp  HttpServer.hpp
includes/Controller/: UserController.hpp
includes/Model/: ModelTemplate.hpp  UserModel.hpp
src/: DatabaseHandler.cpp  HttpServer.cpp  index.cpp
src/Controller/: UserController.cpp
src/Model/: ModelTemplate.cpp  UserModel.cpp
test/: UserModelTest.cpp
